--- a/style.css
+++ b/style.css
@@ -36,10 +36,12 @@ body{
 hr{
     height: 5px;
     background: linear-gradient(transparent,#00FFFF 25%,white 50%,#00FFFF 75%, transparent);
+    border: none;
 }
 
 .conteudo{
     margin-bottom: 48px;
+    margin-top: -10px;
 }
 
 .conteudo-principal{
@@ -66,9 +68,57 @@ hr{
 }
 
 .conteudo-principal-botao{
-    background: linear-gradient(transparent,#00FFFF 25%,white 50%,#00FFFF 75%, transparent);
+    background: linear-gradient(transparent,white 25%,#FF8310 50%,white 75%, transparent);
     width: 180px;
     height: 80px;
     border: 0px;
-    border-radius: 10px;
+    border-radius: 20px;
+    transition: 500ms;
+    border: none;
+    box-shadow: 4px 5px 4px #000000;
+    font-size: 18px;
+    font-weight: bold;
+    font-family: 'Kanit', sans-serif;
+}
+
+.conteudo-principal-botao:hover{
+    transform: scale(1.05);
+    cursor: pointer;
+    background: #FF8310;
+}
+
+.conteudo-principal-imagem{
+    height: 630px;
+}
+
+.conteudo-secundario{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 24px;
+}
+
+.conteudo-secundario-titulo{
+    border-top: 0.4px solid#00FFFF;
+    padding-top: 30px;
+    font-size: 24px;
+    margin-bottom: 16px;
+}
+
+.conteudo-secundario-paragrafo{
+    font-size:18px;    
+}
+
+.conteudo-secundario-paragrafo strong{
+    font-weight: bold;
+}
+
+.rodape{
+    padding: 32px;
+}
+
+.rodape-imagem{
+    display: block;
+    margin: 0 auto;
+    border-radius: 50%;
 }
